--- a/parodify/cucumber.yaml
+++ b/parodify/cucumber.yaml
@@ -1,4 +1,5 @@
-default: -p no_clound_report -p html -p bdd
-no_clound_report: --publish-quiet
+default: -p no_cloud_report -p allure -p bdd
+no_cloud_report: --publish-quiet
 html: --format html --out=logs/report.html
 bdd: --format pretty
+allure: --format AllureCucumber::CucumberFormatter --out=logs
